<resources>
    <string name="app_name">ServiceDesk</string>

    <string name="loginHintText">Введите логин и пароль от личного кабинета КФУ</string>
    <string name="forgetPasswordText">Если вы забыли пароль, обратитесь в диспетчерскую службу ИЦТИС КФУ по телефону 123-45-67</string>
    <string name="noRequestsText">У Вас нет заявок</string>
    <string name="loadingText">Загрузка...</string>
    <string name="allRequests">Все заявки</string>
    <string name="myRequests">Мои заявки</string>
    <string name="map">Карта</string>
    <string name="search">Поиск</string>
    <string name="settingsText">Настроки</string>
    <string name="requestNumber">Номер заявки</string>
    <string name="date_of_reg">Регистрация</string>
    <string name="date_of_realization">Дедлайн</string>
    <string name="zaavitel">Заявитель</string>
    <string name="post">Должнотсь</string>
    <string name="roomNumber">Кабинет</string>
    <string name="body">Текст заявки</string>
    <string name="phone">Телефон</string>
    <string name="building_kfu_name">Адрес</string>
    <string name="dummyText">Текст заявки: Настройка прав доступа учетной записи. Прошу предоставить доступ с правами администратора на имя Сулейманова Рината в систему ServiceDesk.</string>
    <string name="delay_request">Продлить</string>
    <string name="complete_request">Завершить</string>
    <string name="exit">Выйти</string>
    <string name="ok_button">ОК</string>
    <string name="write_to_tech_support">Тех. поддрежка</string>
    <string name="description_done_job">Описание выполненных работ:</string>
    <string name="open_dialog">открыть диалог</string>
    <string name="close_dialog">закрыть диалог</string>
    <string name="copy_request">Копировать заявку</string>
    <string name="login_failed">Неправильный логин или пароль</string>

    <string name="settings">settings</string>
    <string name="userRequestsAmount">userRequestsAmount</string>
    <string name="user_id">user_id</string>
    <string name="user_login">user_login</string>
    <string name="user_password">user_password</string>
    <string name="searchParams">Параметры поиска</string>
    <string name="requestStatus">Статус заявки</string>
    <string name="showResults">Показать результаты</string>
    <string name="number">Номер</string>
    <string name="date_of_req_reg">Дата регистрации</string>
    <string name="pick_date">Выбрать дату</string>
    <string name="date_of_closing">Дата закрытия</string>
    <string name="podrazdelenie">Подразделение</string>
    <string name="location_address">Местонахождения (адрес)</string>
    <string name="otdel_employees">Отдел (исполнителей заявки)</string>
    <string name="emp_fio">ФИО Исполнителя</string>
    <string name="reg_user">Заявку зарегистрировал</string>
    <string name="request_type">Тип заявки (работ)</string>
    <string name="type">Тип</string>
    <string name="request_info">Текст заявки</string>

    <string name="all_requests_fragment_tag">ALL REQUESTS</string>
    <string name="my_requests_fragment_tag">MY REQUESTS</string>
    <string name="map_fragment_tag">MAP</string>
    <string name="search_fragment_tag">SEARCH</string>
    <string name="view_search_fragment_tag">VIEW SEARCH</string>
    <string name="settings_fragment_tag">SETTINGS</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>

    <string-array name="requestStatusArray">
        <item>Новая</item>
        <item>Выполнена</item>
        <item>Выполняется</item>
        <item>Отменена</item>
        <item>Приостановлена</item>
        <item>Закрыта</item>
    </string-array>

    <string-array name="requestStatusArrayWithEmptySelection">
        <item></item>
        <item>Новая</item>
        <item>Выполнена</item>
        <item>Выполняется</item>
        <item>Отменена</item>
        <item>Приостановлена</item>
        <item>Закрыта</item>
    </string-array>

    <string-array name="tech_groups">
        <item></item>
        <item>Отдел обслуживания компьютерной техники</item>
        <item>Инженерная служба</item>
        <item>Диспетчерская служба</item>
        <item>Отдел системного администрирования</item>
        <item>Сектор сопровождения сетей связи</item>
        <item>Отдел разработки информационных систем</item>
        <item>Отдел внедрения и сопровождения информационных систем</item>
        <item>Сектор сопровождения договоров</item>
        <item>Отдел сопровождения мультимедийного оборудования</item>
    </string-array>

</resources>
