<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/requestLayout"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/requestCode"
            tools:text="Номер заявки: №09-561"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/requestDateOfRegistration"
            tools:text="Регистрация: 18.03.2019 14:56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/requestDateOfRealization"
            tools:text="Дедлайн: 22.03.2019 12.00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelData"
            android:text="Данные о заявителе: "
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/requestZaavitel"
            tools:text="Заявитель: Нурутдинов Султан Хамитович"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelPost"
            tools:text="Должность: ведущий программист"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelBuildingKfu"
            tools:text="Подразделение: НБ им.Лобачевского"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelBuildingKfuRoomNumber"
            tools:text="Кабинет: 402a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelContact"
            tools:text="Контакт: Александрова Ирина Сергеевна"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zaavitelPhone"
            tools:text="Телефон: +7(843)233-77-43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/requestBody"
            tools:text="@string/dummyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/employeeData"
            tools:text="Исполнитель: "
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/delayRequestButton"
            android:padding="13dp"
            android:text="@string/delay_request"
            android:layout_weight="50"
            android:layout_marginEnd="3dp"
            android:textColor="@android:color/white"
            android:background="@color/kfuDefaultColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/completeRequestButton"
            android:padding="13dp"
            android:text="@string/complete_request"
            android:textColor="@android:color/white"
            android:layout_weight="50"
            android:background="@color/kfuDefaultColor"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

</RelativeLayout>